Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dr. Selim Ünal | Machine Learning, Nanotechnology and Data Science Expert">
-  <title>Dr. Selim Ünal - Academic Portfolio</title>
+  <title>Dr. Selim Ünal lllll- Academic Portfolio</title>
   
   <style>
     * {
@@ -736,4 +736,5 @@
   </script>
 
 </body>
+
 </html>
