Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Dr. Selim Ünal | Machine Learning, Nanotechnology and Data Science Expert">
-  <title>Dr. Selim Ünal lllbbbll- Academic Portfolio</title>
+  <meta name="description" content="Dr. Selimmmmmmmmmmmmmmmmmmm Ünal | Machine Learning, Nanotechnology and Data Science Expert">
+  <title>Dr. Selimmmmmmmmmmmmmmmmmmm Ünal lllbbbll- Academic Portfolio</title>
   
   <style>
     * {
@@ -483,7 +483,7 @@
   <!-- HEADER -->
   <header>
     <div class="header-content">
-      <a href="#" class="logo">Dr. Selim Ünal</a>
+      <a href="#" class="logo">Dr. Selimmmmmmmmmmmmmmmmmmm Ünal lllll</a>
       <nav id="nav">
         <a href="#about">About</a>
         <a href="#research">Research</a>
@@ -498,7 +498,7 @@
 
   <!-- HERO SECTION -->
   <section class="hero">
-    <h1 class="hero-title">Dr. Selim Ünal</h1>
+    <h1 class="hero-title">Dr. Selimmmmmmmmmmmmmmmmmmm Ünal</h1>
     <p class="hero-subtitle">Machine Learning, Nanotechnology and Data Science Expert</p>
     <a href="#contact" class="hero-cta">
       <span>Get in Touch</span>
@@ -657,7 +657,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 Dr. Selim Ünal | Tüm Hakları Saklıdır</p>
+    <p>&copy; 2025 Dr. Selimmmmmmmmmmmmmmmmmmm Ünal | Tüm Hakları Saklıdır</p>
   </footer>
 
   <!-- JavaScript -->
@@ -738,4 +738,5 @@
 </body>
 
 </html>
+
 
