Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@
                         <div class="card-icon">🔬</div>
                         RBS Simulation Analysis
                     </h3>
-                    <p>Applying deep learning algorithms to Rutherford backscattering spectroscopy data for advanced material characterization and automated analysis of material composition and structural properties.</p>
+                    <p>Applying deep learning algorithms to analysis of material composition and structural properties.</p>
                 </div>
                 <div class="card fade-in">
                     <div class="card-date">2024</div>
@@ -1565,3 +1565,4 @@
 
 </body>
 </html>
+
