Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1366,9 +1366,9 @@
                     <div class="card-date">2025</div>
                     <h3>
                         <div class="card-icon">🔬</div>
-                        RBS Simülasyon Analizi
+                        Malzeme Analizi
                     </h3>
-                    <p>İleri malzeme karakterizasyonu ve malzeme bileşimi ile yapısal özelliklerin otomatik analizi için Rutherford geri saçılma spektroskopisi verilerine derin öğrenme algoritmaları uygulanması.</p>
+                    <p>İleri malzeme karakterizasyonu ve malzeme verilerine derin öğrenme algoritmaları uygulanması.</p>
                 </div>
                 <div class="card fade-in">
                     <div class="card-date">2024</div>
@@ -1565,5 +1565,6 @@
 
 </body>
 </html>
+
 
 
