Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             Time Series Analysis
           </h3>
           <p>Developing AI-based prediction models for complex time series data analysis. I specialize in forecasting future values using LSTM, ARIMA, and hybrid models with advanced machine learning techniques.</p>
-          <a href="https://scholar.google.com/citations?hl=en&user=2Pa3krMHJrAC&view_op=list_works&sortby=pubdate" target="_blank" class="btn">
+          <a href="https://www.sciencedirect.com/science/article/pii/S2590123024002974" target="_blank" class="btn">
             <span>🔗</span>
             Link
         </a>
@@ -1556,3 +1556,4 @@
 
 </body>
 </html>
+
