Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     }
 
     .header-content {
-      max-width: 1200px;
+      max-width: 1300px;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
@@ -789,7 +789,7 @@
   <header>
     <div class="header-content">
       <div class="header-left">
-        <a href="#" class="logo">Dr. Selim Ünal</a>
+        <a href="#" class="logo">Selim Ünal, Ph.D.</a>
         <div class="language-switcher">
           <button class="lang-btn active" onclick="switchLanguage('en')" data-lang="en">
             <span class="flag-icon flag-en"></span>
