--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       backdrop-filter: blur(20px);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       padding: 0rem 0;
-      position: sticky;
+      position: relative;
       top: 0;
       z-index: 1000;
       transition: all 0.3s ease;
@@ -613,7 +613,7 @@
     }
 
     /* Responsive Design */
-    @media (max-width: 768px) {
+    @media (max-width: 1008px) {
       .header-content {
         padding: 0 1rem;
       }
