--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       backdrop-filter: blur(20px);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       padding: 0rem 0;
-      position: relative;
+      position: sticky;
       top: 0;
       z-index: 1000;
       transition: all 0.3s ease;
@@ -624,7 +624,7 @@
 
       nav {
         display: none;
-        position: absolute;
+        position: relative;
         top: 100%;
         left: 0;
         width: 100%;
