--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preload" href="/fonts/inter.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/images/hero-bg.jpg" as="image">
+  <link rel="preload" href="/scripts/main.js" as="script">
+  <link rel="preload" href="/styles/main.css" as="style">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dr. Selim Ünal | Machine Learning, Nanotechnology and Data Science">
@@ -1205,3 +1210,4 @@
 
 </body>
 </html>
+
