--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P07H1JJFPR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P07H1JJFPR');
+</script>
   <link rel="preload" href="/fonts/inter.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/images/hero-bg.jpg" as="image">
   <link rel="preload" href="/scripts/main.js" as="script">
@@ -1210,4 +1219,5 @@
 
 </body>
 </html>
+
 
